<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quiz</string>
    <string name="title_activity_select_game">SelectGame</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="est_preparado">Está preparado?</string>
    <string name="vamos_come_ar">vamos começar?</string>
    <string name="divirta_se">Divirta-se</string>
    <string name="teste_seus_conhecimentos_e_mostre_do_que_capaz">Teste seus conhecimentos e mostre do que é capaz</string>
    <string name="geografia">Geografia</string>
    <string name="matem_tica">Matemática</string>
    <string name="hist_ria">História</string>
    <string name="entretenimento">Entretenimento</string>
    <string name="voltar">Voltar</string>
    <string name="pr_ximo">Próximo</string>
    <string name="anterior">Anterior</string>
    <string name="checkbox">CheckBox</string>
    <string-array name="entertainment_questions">
        <item>Qual é o protagonista da série de jogos "The Legend of Zelda"?</item>
        <item>Quem é o diretor do filme "Pulp Fiction"?</item>
        <item>Qual é o nome do personagem principal do filme "O Senhor dos Anéis"?</item>
        <item>Em que ano foi lançado o jogo "Super Mario Bros."?</item>
        <item>Qual é o nome do vilão principal da série de jogos "Final Fantasy VII"?</item>
        <item>Quem é o criador da série de jogos "Metal Gear Solid"?</item>
        <item>Qual é o nome do personagem principal da série de jogos "Assassin's Creed"?</item>
        <item>Quem é o protagonista da série de filmes "Harry Potter"?</item>
        <item>Em qual jogo eletrônico a personagem Lara Croft é conhecida como uma arqueóloga aventureira?</item>
        <item>Qual é o nome do estúdio que desenvolveu o jogo "The Witcher 3: Wild Hunt"?</item>
    </string-array>
    <string-array name="entertainment_answers_1">
        <item>Mario</item> 
        <item>Link</item> 
        <item>Sonic</item> 
        <item>Kratos</item> 
    </string-array>
    <string-array name="entertainment_answers_2">
        <item>Quentin Tarantino</item> 
        <item>Steven Spielberg</item> 
        <item>Christopher Nolan</item> 
        <item>Stanley Kubrick</item> 
    </string-array>
    <string-array name="entertainment_answers_3">
        <item>Gandalf</item> 
        <item>Frodo Bolseiro</item> 
        <item>Aragorn</item> 
        <item>Gollum</item> 
    </string-array>
    <string-array name="entertainment_answers_4">
        <item>1983</item> 
        <item>1984</item> 
        <item>1985</item> 
        <item>1986</item> 
    </string-array>
    <string-array name="entertainment_answers_5">
        <item>Sephiroth</item> 
        <item>Ganon</item> 
        <item>Sin</item> 
        <item>Kefka</item> 
    </string-array>
    <string-array name="entertainment_answers_6">
        <item>Hideo Kojima</item> 
        <item>Shigeru Miyamoto</item> 
        <item>Yuji Naka</item> 
        <item>Satoru Iwata</item> 
    </string-array>
    <string-array name="entertainment_answers_7">
        <item>Ezio Auditore da Firenze</item> 
        <item>Altair Ibn-La\'Ahad</item> 
        <item>Connor Kenway</item> 
        <item>Edward Kenway</item> 
    </string-array>
    <string-array name="entertainment_answers_8">
        <item>Harry Potter</item> 
        <item>Hermione Granger</item> 
        <item>Ron Weasley</item> 
        <item>Draco Malfoy</item> 
    </string-array>
    <string-array name="entertainment_answers_9">
        <item>Uncharted</item> 
        <item>Tomb Raider</item> 
        <item>Prince of Persia</item> 
        <item>Indiana Jones and the Fate of Atlantis</item> 
    </string-array>
    <string-array name="entertainment_answers_10">
        <item>CD Projekt Red</item> 
        <item>Naughty Dog</item> 
        <item>Rockstar Games</item> 
        <item>Ubisoft</item> 
    </string-array>
    <string name="score_message">Sua pontuação: %1$d/%2$d</string>
    <string name="resposta_1">Resposta 1</string>
    <string name="resposta_2">Resposta 2</string>
    <string name="resposta_3">Resposta 3</string>
    <string name="resposta_4">Resposta 4</string>
    <string-array name="history_questions">
        <item>Quem foi o primeiro presidente dos Estados Unidos?</item>
        <item>Em que ano começou a Primeira Guerra Mundial?</item>
        <item>Quem descobriu o Brasil?</item>
        <item>Qual foi o imperador do Brasil durante a Proclamação da República?</item>
        <item>Quem foi o primeiro presidente dos Estados Unidos?</item>
        <item>Qual foi o evento que marcou o início da Revolução Francesa em 1789?</item>
        <item>Quem foi o primeiro imperador romano?</item>
        <item>Quem foi o último faraó do Antigo Egito?</item>
        <item>Em que ano ocorreu a Revolução Francesa?</item>
        <item>Quem foi o primeiro homem a pisar na Lua?</item>
        <item>Quem foi o líder do movimento pelos direitos civis nos Estados Unidos?</item>
    </string-array>
    <string-array name="history_answers_1">
        <item>George Washington</item> 
        <item>Abraham Lincoln</item> 
        <item>Thomas Jefferson</item> 
        <item>John Adams</item> 
    </string-array>
    <string-array name="history_answers_2">
        <item>1918</item> 
        <item>1939</item> 
        <item>1945</item> 
        <item>1914</item> 
    </string-array>
    <string-array name="history_answers_3">
        <item>Cristóvão Colombo</item> 
        <item>Vasco da Gama</item> 
        <item>Pedro Álvares Cabral</item> 
        <item>Amerígo Vespucci</item> 
    </string-array>
    <string-array name="history_answers_4">
        <item>Dom João VI</item> 
        <item>Dom Pedro I</item> 
        <item>Pedro II</item> 
        <item>Deodoro da Fonseca</item> 
    </string-array>
    <string-array name="history_answers_5">
        <item>O Julgamento de Luís XVI</item> 
        <item>A Queda da Bastilha</item> 
        <item>A Proclamação da República</item> 
        <item>A Declaração dos Direitos do Homem e do Cidadão</item> 
    </string-array>
    <string-array name="history_answers_6">
        <item>Júlio César</item> 
        <item>Augusto</item> 
        <item>Rômulo Augusto</item> 
        <item>Calígula</item> 
    </string-array>
    <string-array name="history_answers_7">
        <item>Ramsés II</item> 
        <item>Akhenaton</item> 
        <item>Tutancâmon</item> 
        <item>Cleópatra</item> 
    </string-array>
    <string-array name="history_answers_8">
        <item>1789</item> 
        <item>1804</item> 
        <item>1799</item> 
        <item>1815</item> 
    </string-array>
    <string-array name="history_answers_9">
        <item>Yuri Gagarin</item> 
        <item>Buzz Aldrin</item> 
        <item>Kalpana Chawla</item> 
        <item>Neil Armstrong</item> 
    </string-array>
    <string-array name="history_answers_10">
        <item>Rosa Parks</item> 
        <item>Martin Luther King Jr.</item> 
        <item>Malcolm X</item> 
        <item>Barack Obama</item> 
    </string-array>
    <string-array name="geography_questions">
        <item>Qual é a capital da França?</item>
        <item>Qual é o rio mais longo do mundo?</item>
        <item>Qual é o maior deserto do mundo?</item>
        <item>Qual é o país com a maior área territorial?</item>
        <item>Qual é o maior oceano do mundo?</item>
        <item>Qual é o país mais populoso do mundo?</item>
        <item>Qual é o maior país da América do Sul?</item>
        <item>Qual é o país com o maior número de ilhas?</item>
        <item>Qual é o ponto mais alto do mundo?</item>
        <item>Qual é o maior lago do mundo em volume de água?</item>
    </string-array>
    <string-array name="geography_answers_1">
        <item>Berlim</item> 
        <item>Londres</item> 
        <item>Paris</item> 
        <item>Madrid</item> 
    </string-array>
    <string-array name="geography_answers_2">
        <item>Amazonas</item> 
        <item>Nilo</item> 
        <item>Mississipi</item> 
        <item>Yangtzé</item> 
    </string-array>
    <string-array name="geography_answers_3">
        <item>Atacama</item> 
        <item>Kalahari</item> 
        <item>Gobi</item> 
        <item>Saara</item> 
    </string-array>
    <string-array name="geography_answers_4">
        <item>Canadá</item> 
        <item>Rússia</item> 
        <item>Estados Unidos</item> 
        <item>China</item> 
    </string-array>
    <string-array name="geography_answers_5">
        <item>Oceano Pacífico</item> 
        <item>Oceano Atlântico</item> 
        <item>Oceano Índico</item> 
        <item>Oceano Ártico</item> 
    </string-array>
    <string-array name="geography_answers_6">
        <item>Índia</item> 
        <item>Estados Unidos</item> 
        <item>Brasil</item> 
        <item>China</item> 
    </string-array>
    <string-array name="geography_answers_7">
        <item>Argentina</item> 
        <item>Estados Unidos</item> 
        <item>Brasil</item> 
        <item>Canadá</item> 
    </string-array>
    <string-array name="geography_answers_8">
        <item>Indonésia</item> 
        <item>Filipinas</item> 
        <item>Finlândia</item> 
        <item>Japão</item> 
    </string-array>
    <string-array name="geography_answers_9">
        <item>K2</item> 
        <item>Monte Everest</item> 
        <item>Kangchenjunga</item> 
        <item>Lhotse</item> 
    </string-array>
    <string-array name="geography_answers_10">
        <item>Lago Superior</item> 
        <item>Lago Vitória</item> 
        <item>Lago Baikal</item> 
        <item>Lago Michigan</item> 
    </string-array>
    <string-array name="math_questions">
        <item>Qual é o resultado de 1 + 1 + 1 – 1 * 1?</item>
        <item>Quanto é 10 – 3 * 2?</item>
        <item>Qual é o próximo número na sequência: 1, 4, 9, 16, …?</item>
        <item>Quantos triângulos existem em um pentágono?</item>
        <item>Qual é o resultado de 0 ÷ 0?</item>
        <item>Se um relógio marca 2 horas a mais do que o correto a cada 24 horas, quanto tempo ele marcará depois de 10 dias?</item>
        <item>Quantos lados tem um círculo?</item>
        <item>Se você tem 3 maçãs e 4 laranjas, quantas frutas você tem?</item>
        <item>Qual é o resultado de 2 elevado à 3?</item>
        <item>Quantos buracos existem em uma rosquinha?</item>
    </string-array>
    <string-array name="math_answers_1">
        <item>1</item> 
        <item>2</item> 
        <item>3</item> 
        <item>4</item> 
    </string-array>
    <string-array name="math_answers_2">
        <item>4</item> 
        <item>6</item> 
        <item>8</item> 
        <item>10</item> 
    </string-array>
    <string-array name="math_answers_3">
        <item>20</item> 
        <item>24</item> 
        <item>25</item> 
        <item>32</item> 
    </string-array>
    <string-array name="math_answers_4">
        <item>5</item> 
        <item>10</item> 
        <item>15</item> 
        <item>20</item> 
    </string-array>
    <string-array name="math_answers_5">
        <item>Indeterminado</item> 
        <item>Infinito</item> 
        <item>0</item> 
        <item>1</item> 
    </string-array>
    <string-array name="math_answers_6">
        <item>2 horas a mais</item> 
        <item>10 horas a mais</item> 
        <item>20 horas a mais</item> 
        <item>1 dia a mais</item> 
    </string-array>
    <string-array name="math_answers_7">
        <item>Infinito</item> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>
    <string-array name="math_answers_8">
        <item>3</item> 
        <item>5</item> 
        <item>7</item> 
        <item>12</item> 
    </string-array>
</resources>