<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4A181"
    tools:context=".quizEntertainment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="160dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <RadioGroup
        android:id="@+id/answerRadioGroup"
        android:layout_width="350dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596">

        <RadioButton
            android:id="@+id/FirstAnswerRadioButton"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:buttonTint="@color/white"
            android:text="@string/resposta_1"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/SecondAnswerRadioButton"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:buttonTint="@color/white"
            android:text="@string/resposta_2"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/ThirdAnswerRadioButton"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:buttonTint="@color/white"
            android:text="@string/resposta_3"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/ForthAnswerRadioButton"
            android:layout_width="350dp"
            android:layout_height="83dp"
            android:buttonTint="@color/white"
            android:text="@string/resposta_4"
            android:textColor="@color/black" />

    </RadioGroup>

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anterior"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pr_ximo"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:progressTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />


</androidx.constraintlayout.widget.ConstraintLayout>